--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^2.9.0",
-    "@tauri-apps/plugin-opener": "^2.5.0"
+    "@tauri-apps/plugin-barcode-scanner": "~2.4.0",
+    "@tauri-apps/plugin-http": "~2.5.2",
+    "@tauri-apps/plugin-os": "~2.3.1",
+    "@tauri-apps/plugin-sql": "~2.3.0"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.1.1",
