--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "i18n:gen": "node scripts/gen-i18n-types.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -13,9 +14,8 @@
   "dependencies": {
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-barcode-scanner": "^2.0.0",
-    "@tauri-apps/plugin-dialog": "^2.0.0",
-    "@tauri-apps/plugin-os": "^2.0.0",
-    "@tauri-apps/plugin-sql": "^2.0.0",
+    "@tauri-apps/plugin-opener": "^2.5.2",
+    "@tauri-apps/plugin-os": "~2",
     "html5-qrcode": "^2.3.8",
     "svelte": "^5.0.0"
   },
