--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,19 +26,26 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
-tauri-plugin-opener = "2"
+tauri = { version = "2.9.0", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
-tauri-plugin-http = "2.5.2"
-tauri-plugin-os = "2.3.1"
+tauri-plugin-os = "2"
+tauri-plugin-opener = "2.5.2"
 revm = { version = "31", features = ["serde"] }
 alloy-primitives = "1.4.1"
 helios = { git = "https://github.com/a16z/helios", branch = "master",default-features = false}
 once_cell = "1.21.3"
 regex = "1.12.2"
 time = "0.3.44"
-sqlx = { version = "0.8.6", features = ["sqlite","time"] }
+rusqlite = { version = "0.37", features = ["bundled"] }
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.31.0"
+tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
+rusqlite_migration = "2.3.0"
+url = "2.5"
+
+[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
+tauri-plugin-barcode-scanner = "2.4.2"
+
 
 
