--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,17 +27,16 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 tauri = { version = "2.9.0", features = [] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
 tauri-plugin-os = "2"
 tauri-plugin-opener = "2.5.2"
-revm = { version = "31", features = ["serde"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+revm = "31.0.0"
 alloy-primitives = "1.4.1"
-helios = { git = "https://github.com/a16z/helios", branch = "master",default-features = false}
 once_cell = "1.21.3"
 regex = "1.12.2"
 time = "0.3.44"
-rusqlite = { version = "0.37", features = ["bundled"] }
+rusqlite = { version = "0.37", features = ["bundled"] } 
 r2d2 = "0.8.10"
 r2d2_sqlite = "0.31.0"
 tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
