--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,11 +28,11 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2.9.0", features = [] }
 tauri-plugin-os = "2"
-tauri-plugin-opener = "2.5.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 revm = "31.0.0"
 alloy-primitives = "1.4.1"
+alloy-sol-types = "1.4.1"
 once_cell = "1.21.3"
 regex = "1.12.2"
 time = "0.3.44"
@@ -42,6 +42,11 @@ rust-rocksdb = "0.44.2"
 
 z_wallet_core = { git = "https://github.com/zeno-studio/z-wallet-core.git", branch = "master" }
 bincode = "2.0.1"
+reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
+hex = "0.4.3"
+base64 = "0.22.1"
+alloy-eip7702 = "0.6.3"
+
 
 
 [target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
