--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@tsconfig/svelte": "^5.0.5",
+    "autoprefixer": "^10.4.22",
     "svelte-check": "^3.8.6",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
