--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,6 +38,8 @@ alloy-provider = "1.1.1"
 alloy-eips = "1.1.1"
 alloy-consensus = "1.1.1"
 alloy-network = "1.1.1"
+alloy-rlp = "0.3.12"
+alloy-contract = "1.1.1"
 
 once_cell = "1.21.3"
 regex = "1.12.2"
@@ -52,6 +54,11 @@ reqwest = { version = "0.12.22", features = ["json","brotli","gzip","http2", "ru
 rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
 hex = "0.4.3"
 base64 = "0.22.1"
+alloy-dyn-abi = "1.4.1"
+alloy-json-abi = "1.4.1"
+piper-rs = "0.1.9"
+whisper-rs = "0.15.1"
+
 
 
 
