--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,8 @@ alloy-consensus = "1.1.1"
 alloy-network = "1.1.1"
 alloy-rlp = "0.3.12"
 alloy-contract = "1.1.1"
+alloy-dyn-abi = "1.4.1"
+alloy-json-abi = "1.4.1"
 
 once_cell = "1.21.3"
 regex = "1.12.2"
@@ -47,27 +49,19 @@ time = "0.3.44"
 tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
 url = "2.5"
 rust-rocksdb = "0.44.2"
-
-z_wallet_core = { git = "https://github.com/zeno-studio/z-wallet-core.git", branch = "master" }
 bincode = "2.0.1"
 reqwest = { version = "0.12.22", features = ["json","brotli","gzip","http2", "rustls-tls"], default-features = false }
 rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
 hex = "0.4.3"
 base64 = "0.22.1"
-alloy-dyn-abi = "1.4.1"
-alloy-json-abi = "1.4.1"
 piper-rs = "0.1.9"
 whisper-rs = "0.15.1"
 
-
-
-
-
-
-
+z_wallet_core = { git = "https://github.com/zeno-studio/z-wallet-core.git", branch = "master" }
+helios = { git = "https://github.com/a16z/helios", tag = "0.10.2" }
+getrandom = "0.3.4"
 
 [target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
 tauri-plugin-barcode-scanner = "2.4.2"
-
 
 
